# sagemaker-pytorch-boilerplate

./: .gitignore  LICENSE  README.md  build_and_push.sh  build_local_env.sh  pyproject.toml  pyvenv.cfg  train  workflow.ipynb
conf/: config.yaml
container/: Dockerfile  docker_template.jinja2  pyproject.toml  render_docker.py  render_docker.sh  requirements.txt
container/local_test/: explore_local.sh  train_local.sh
container/local_test/test_dir/input/data/: training
container/local_test/test_dir/model/: decision-tree-model.pkl  model.ckpt  trainer.ckpt
container/src/: predictor.py  train
container/src/conf/: config.yaml  entry.yaml
container/src/conf/dataset/: iris.yaml  mnist_template.yaml
container/src/conf/datasets/: dataset_template.yaml  mnist_template.yaml
container/src/conf/model/: mlp_template.yaml
container/src/conf/models/: mlp_template.yaml  model_template.yaml
container/src/conf/trainer/: default.yaml
container/src/src/: app.py  paths.py  training.py
container/src/src/configs/: train_config.py
container/src/src/datasets/: iris.py  mnist.py
container/src/src/models/: mlp.py  model_handler.py  model_template.py  simple_mlp.py
deployement/: predictor.py
local_test/: train_local.sh
local_test/test_dir/model/: trainer.ckpt
src/: paths.py  training.py
src/conf/dataset/: iris.yaml
src/datasets/: __init__.py  base_dataset.py  mnist.py
src/src/: paths.py
