[tool.poetry]
name = "creating_marketplace_products"
version = "0.1.0"
description = ""
authors = ["Thomas Chaton <thomas.chaton.ai@gmail.com>"]

[tool.poetry.dependencies]
python = "3.7.8"
torch = "1.6.0"
hydra-core = "1.0.0rc2"
numpy = "^1.19.1"
scipy = "^1.5.2"
scikit-learn = "^0.23.2"
pandas = "^1.1.0"
flask = "^1.1.2"
gevent = "^20.6.2"
gunicorn = "^20.0.4"
pytorch-lightning = "^0.8.5"
torchserve = "^0.2.0"
torch-model-archiver = "^0.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
